deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vcenter-${USER}
  labels:
    app: fvmw
    user: ${USER}
spec:
  selector:
    app: fvmw
    user: ${USER}
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
